VKBootstrap/source/CVkBootstrap.h

enum class VkbInstanceError {
    NONE,
    VULKAN_UNAVAILABLE,
    VULKAN_VERSION_UNAVAILABLE,
    VULKAN_VERSION_1_1_UNAVAILABLE,
    VULKAN_VERSION_1_2_UNAVAILABLE,
    FAILED_CREATE_INSTANCE,
    FAILED_CREATE_DEBUG_MESSENGER,
    REQUESTED_LAYERS_NOT_PRESENT,
    REQUESTED_EXTENSIONS_NOT_PRESENT,
    WINDOWING_EXTENSIONS_NOT_PRESENT,
};
enum class VkbDeviceError {
    NONE,
    FAILED_CREATE_DEVICE,
    VKPHYSICALDEVICEFEATURES2_IN_PNEXT_CHAIN_WHILE_USING_ADD_REQUIRED_EXTENSION_FEATURES,
};
enum class VkbSwapchainError {
    NONE,
    SURFACE_HANDLE_NOT_PROVIDED,
    FAILED_QUERY_SURFACE_SUPPORT_DETAILS,
    FAILED_CREATE_SWAPCHAIN,
    FAILED_GET_SWAPCHAIN_IMAGES,
    FAILED_CREATE_SWAPCHAIN_IMAGE_VIEWS,
    REQUIRED_MIN_IMAGE_COUNT_TOO_LOW,
    REQUIRED_USAGE_NOT_SUPPORTED
};
    
    // Create a VkInstance. Return a VkbInstanceError if it failed.
    EXPORT VkbInstanceError build(VkbInstanceBuilder builder, VkbInstance* result);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbInstanceBuilder builder, VkAllocationCallbacks* callbacks);
    
    EXPORT VkbDeviceError build(VkbDeviceBuilder builder, VkbDevice* result);
    
    EXPORT void add_pNext(VkbDeviceBuilder builder, VkBaseOutStructure* structure);
    

    EXPORT void set_allocation_callbacks(VkbDeviceBuilder builder, VkAllocationCallbacks* callbacks);
    
    EXPORT VkbSwapchainError build(VkbSwapchainBuilder builder, VkbSwapchain* result);
    // Use the default image usage bitmask values. This is the default if no image usages
    // are provided. The default is VK_IMAGE_USAGE_COLOR_ATTACHMENT_BIT
    EXPORT void use_default_image_usage_flags(VkbSwapchainBuilder builder);
    // Set the number of views in for multiview/stereo surface
    EXPORT void set_image_array_layer_count(VkbSwapchainBuilder builder, uint32_t array_layer_count);
    // Convenient named constants for passing to set_desired_min_image_count().
    // Note that it is not an `enum class`, so its constants can be passed as an integer value without casting
    // In other words, these might as well be `static const int`, but they benefit from being grouped together this way.
    enum BufferMode {
        SINGLE_BUFFERING = 1,
        DOUBLE_BUFFERING = 2,
        TRIPLE_BUFFERING = 3,
    };
    // Sets the desired minimum image count for the swapchain.
    // Note that the presentation engine is always free to create more images than requested.
    // You may pass one of the values specified in the BufferMode enum, or any integer value.
    // For instance, if you pass DOUBLE_BUFFERING, the presentation engine is allowed to give you a double buffering setup, triple buffering, or more. This is up to the drivers.
    EXPORT void set_desired_min_image_count(VkbSwapchainBuilder builder, uint32_t min_image_count);
    // Sets a required minimum image count for the swapchain.
    // If the surface capabilities cannot allow it, building the swapchain will result in the `SwapchainError::required_min_image_count_too_low` error.
    // Otherwise, the same observations from set_desired_min_image_count() apply.
    // A value of 0 is specially interpreted as meaning "no requirement", and is the behavior by default.
    EXPORT void set_required_min_image_count(VkbSwapchainBuilder builder, uint32_t required_min_image_count);
    // Set whether the Vulkan implementation is allowed to discard rendering operations that
    // affect regions of the surface that are not visible. Default is true.
    // Note: Applications should use the default of true if they do not expect to read back the content
    // of presentable images before presenting them or after reacquiring them, and if their fragment
    // shaders do not have any side effects that require them to run for all pixels in the presentable image.
    EXPORT void set_clipped(VkbSwapchainBuilder builder, bool clipped = true);
    // Set the VkSwapchainCreateFlagBitsKHR.
    EXPORT void set_create_flags(VkbSwapchainBuilder builder, VkSwapchainCreateFlagBitsKHR create_flags);
    // Set the transform to be applied, like a 90 degree rotation. Default is no transform.
    EXPORT void set_pre_transform_flags(VkbSwapchainBuilder builder, VkSurfaceTransformFlagBitsKHR pre_transform_flags);
    // Set the alpha channel to be used with other windows in on the system. Default is VK_COMPOSITE_ALPHA_OPAQUE_BIT_KHR.
    EXPORT void set_composite_alpha_flags(VkbSwapchainBuilder builder, VkCompositeAlphaFlagBitsKHR composite_alpha_flags);
    // Add a structure to the pNext chain of VkSwapchainCreateInfoKHR.
    // The structure must be valid when SwapchainBuilder::build() is called.
    //
    // Original Code:
    //     template <typename T> SwapchainBuilder& add_pNext(T* structure) {
    //         info.pNext_chain.push_back(reinterpret_cast<VkBaseOutStructure*>(structure));
    //         return *this;
    //     }
    EXPORT void add_pNext(VkbSwapchainBuilder builder, VkBaseOutStructure* structure);
    // Provide custom allocation callbacks.
    EXPORT void set_allocation_callbacks(VkbSwapchainBuilder builder, VkAllocationCallbacks* callbacks);
 // namespace VkbSwapchainBuilderFunctions

// A quick little c wrapper to help remove any allocated memory.
EXPORT void _vkb_impl_c_free(void* data);