VKBootstrap/modified_generated_windows.jai


    // Use the default image usage bitmask values. This is the default if no image usages
    // are provided. The default is VK_IMAGE_USAGE_COLOR_ATTACHMENT_BIT
    use_default_image_usage_flags :: (builder: SwapchainBuilder) -> void #foreign libvkbootstrap "?use_default_image_usage_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@@Z";

    // Set the number of views in for multiview/stereo surface
    set_image_array_layer_count :: (builder: SwapchainBuilder, array_layer_count: u32) -> void #foreign libvkbootstrap "?set_image_array_layer_count@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@I@Z";

    // Convenient named constants for passing to set_desired_min_image_count().
    // Note that it is not an `enum class`, so its constants can be passed as an integer value without casting
    // In other words, these might as well be `static const int`, but they benefit from being grouped together this way.
    BufferMode :: enum s32 {
        SINGLE_BUFFERING :: 1;
        DOUBLE_BUFFERING :: 2;
        TRIPLE_BUFFERING :: 3;
    }

    // Sets the desired minimum image count for the swapchain.
    // Note that the presentation engine is always free to create more images than requested.
    // You may pass one of the values specified in the BufferMode enum, or any integer value.
    // For instance, if you pass DOUBLE_BUFFERING, the presentation engine is allowed to give you a double buffering setup, triple buffering, or more. This is up to the drivers.
    set_desired_min_image_count :: (builder: SwapchainBuilder, min_image_count: u32) -> void #foreign libvkbootstrap "?set_desired_min_image_count@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@I@Z";

    // Sets a required minimum image count for the swapchain.
    // If the surface capabilities cannot allow it, building the swapchain will result in the `SwapchainError::required_min_image_count_too_low` error.
    // Otherwise, the same observations from set_desired_min_image_count() apply.
    // A value of 0 is specially interpreted as meaning "no requirement", and is the behavior by default.
    set_required_min_image_count :: (builder: SwapchainBuilder, required_min_image_count: u32) -> void #foreign libvkbootstrap "?set_required_min_image_count@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@I@Z";

    // Set whether the Vulkan implementation is allowed to discard rendering operations that
    // affect regions of the surface that are not visible. Default is true.
    // Note: Applications should use the default of true if they do not expect to read back the content
    // of presentable images before presenting them or after reacquiring them, and if their fragment
    // shaders do not have any side effects that require them to run for all pixels in the presentable image.
    set_clipped :: (builder: SwapchainBuilder, clipped := true) -> void #foreign libvkbootstrap "?set_clipped@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@_N@Z";

    // Set the VkSwapchainCreateFlagBitsKHR.
    set_create_flags :: (builder: SwapchainBuilder, create_flags: VkSwapchainCreateFlagBitsKHR) -> void #foreign libvkbootstrap "?set_create_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@W4VkSwapchainCreateFlagBitsKHR@@@Z";

    // Set the transform to be applied, like a 90 degree rotation. Default is no transform.
    set_pre_transform_flags :: (builder: SwapchainBuilder, pre_transform_flags: VkSurfaceTransformFlagBitsKHR) -> void #foreign libvkbootstrap "?set_pre_transform_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@W4VkSurfaceTransformFlagBitsKHR@@@Z";

    // Set the alpha channel to be used with other windows in on the system. Default is VK_COMPOSITE_ALPHA_OPAQUE_BIT_KHR.
    set_composite_alpha_flags :: (builder: SwapchainBuilder, composite_alpha_flags: VkCompositeAlphaFlagBitsKHR) -> void #foreign libvkbootstrap "?set_composite_alpha_flags@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@W4VkCompositeAlphaFlagBitsKHR@@@Z";

    // Add a structure to the pNext chain of VkSwapchainCreateInfoKHR.
    // The structure must be valid when SwapchainBuilder::build() is called.
    //
    // Original Code:
    //     template <typename T> SwapchainBuilder& add_pNext(T* structure) {
    //         info.pNext_chain.push_back(reinterpret_cast<VkBaseOutStructure*>(structure));
    //         return *this;
    //     }
    add_pNext :: (builder: SwapchainBuilder, structure: *VkBaseOutStructure) -> void #foreign libvkbootstrap "?add_pNext@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@PEAUVkBaseOutStructure@@@Z";

    // Provide custom allocation callbacks.
    set_allocation_callbacks :: (builder: SwapchainBuilder, callbacks: *VkAllocationCallbacks) -> void #foreign libvkbootstrap "?set_allocation_callbacks@VkbSwapchainBuilderFunctions@@YAXPEAUVkbSwapchainBuilder_T@@PEAUVkAllocationCallbacks@@@Z";

// A quick little c wrapper to help remove any allocated memory.
_vkb_impl_c_free :: (data: *void) -> void #foreign libvkbootstrap "?_vkb_impl_c_free@@YAXPEAX@Z";

#scope_file

#import "Vulkan_1_3";
#import "Basic";

#if OS == .WINDOWS {
    libvkbootstrap :: #library "VKBootstrap";
} else #if OS == .LINUX {
    libvkbootstrap :: #library "VKBootstrap";
} else {
    #assert(false);
}
